fixed snowshoe pic spacing

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -574,10 +574,11 @@ h1 {
 
 #snowshoe-container {
   width: 45%;
-  height: 100%;
+  /* height: 100%; */
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   margin-bottom: 2rem;
 }
 
@@ -604,7 +605,6 @@ h1 {
   height: auto;
   border-radius: 1rem;
   margin-left: 4rem;
-  margin-right: 4rem;
 }
 
 .more-about-row-container {
@@ -898,8 +898,7 @@ textarea {
   }
 
   #about-pic {
-    margin-left: .75rem;
-    margin-right: .75rem;
+    margin-right: 2.5rem;
   }  
 
   #about-container {
